@@ -17,6 +17,7 @@
     just on text space width).
 14. Add option to use slight rounding for window decorations - set in style
     config as option also affects MDI windows.
+15. Draw tooltips using the selection gradient.
 
 1.5.2
 -----
